--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2826,3 +2826,150 @@ body.is-menu-visible #menu {
   box-shadow: 0 0 1.5rem 0 rgba(0, 0, 0, 0.2);
   visibility: visible; }
 
+/* prox */
+#prox {
+  background-color: #6694ff;
+  color: rgba(255, 255, 255, 0.75);
+  background-attachment: fixed;
+  background-image: linear-gradient(rgba(206, 27, 40, 0.25), rgba(206, 27, 40, 0.25)), url(../../images/prox01.jpg);
+  background-position: bottom;
+  background-repeat: no-repeat;
+  background-size: cover;
+  position: relative;
+  text-align: center;
+  z-index: 1; }
+  #prox input, #prox select, #prox textarea {
+    color: #ffffff; }
+  #prox a {
+    color: #ffffff; }
+  #prox strong, #prox b {
+    color: #ffffff; }
+  #prox h1, #prox h2, #prox h3, #prox h4, #prox h5, #prox h6 {
+    color: #ffffff; }
+  #prox blockquote {
+    border-left-color: rgba(255, 255, 255, 0.25); }
+  #prox code {
+    background: rgba(255, 255, 255, 0.075);
+    border-color: rgba(255, 255, 255, 0.25); }
+  #prox hr {
+    border-bottom-color: rgba(255, 255, 255, 0.25); }
+  #prox input[type="submit"],
+  #prox input[type="reset"],
+  #prox input[type="button"],
+  #prox button,
+  #prox .button {
+    background-color: transparent;
+    box-shadow: inset 0 0 0 1px #ffffff;
+    color: #ffffff !important; }
+    #prox input[type="submit"]:hover,
+    #prox input[type="reset"]:hover,
+    #prox input[type="button"]:hover,
+    #prox button:hover,
+    #prox .button:hover {
+      background-color: rgba(255, 255, 255, 0.1); }
+      #prox input[type="submit"]:hover:active,
+      #prox input[type="reset"]:hover:active,
+      #prox input[type="button"]:hover:active,
+      #prox button:hover:active,
+      #prox .button:hover:active {
+        background-color: rgba(255, 255, 255, 0.25); }
+    #prox input[type="submit"].primary,
+    #prox input[type="reset"].primary,
+    #prox input[type="button"].primary,
+    #prox button.primary,
+    #prox .button.primary {
+      box-shadow: none;
+      background-color: #ffffff;
+      color: #6694ff !important; }
+      #prox input[type="submit"].primary:hover,
+      #prox input[type="reset"].primary:hover,
+      #prox input[type="button"].primary:hover,
+      #prox button.primary:hover,
+      #prox .button.primary:hover {
+        background-color: rgba(255, 255, 255, 0.875);
+        box-shadow: none; }
+        #prox input[type="submit"].primary:hover:active,
+        #prox input[type="reset"].primary:hover:active,
+        #prox input[type="button"].primary:hover:active,
+        #prox button.primary:hover:active,
+        #prox .button.primary:hover:active {
+          background-color: rgba(255, 255, 255, 0.5); }
+  #prox label {
+    color: #ffffff; }
+  #prox input[type="text"],
+  #prox input[type="password"],
+  #prox input[type="email"],
+  #prox input[type="tel"],
+  #prox input[type="search"],
+  #prox input[type="url"],
+  #prox select,
+  #prox textarea {
+    background-color: rgba(255, 255, 255, 0.075);
+    border-color: rgba(255, 255, 255, 0.25); }
+    #prox input[type="text"]:focus,
+    #prox input[type="password"]:focus,
+    #prox input[type="email"]:focus,
+    #prox input[type="tel"]:focus,
+    #prox input[type="search"]:focus,
+    #prox input[type="url"]:focus,
+    #prox select:focus,
+    #prox textarea:focus {
+      border-color: #ffffff;
+      box-shadow: 0 0 0 1px #ffffff; }
+  #prox select {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='40' height='40' preserveAspectRatio='none' viewBox='0 0 40 40'%3E%3Cpath d='M9.4,12.3l10.4,10.4l10.4-10.4c0.2-0.2,0.5-0.4,0.9-0.4c0.3,0,0.6,0.1,0.9,0.4l3.3,3.3c0.2,0.2,0.4,0.5,0.4,0.9 c0,0.4-0.1,0.6-0.4,0.9L20.7,31.9c-0.2,0.2-0.5,0.4-0.9,0.4c-0.3,0-0.6-0.1-0.9-0.4L4.3,17.3c-0.2-0.2-0.4-0.5-0.4-0.9 c0-0.4,0.1-0.6,0.4-0.9l3.3-3.3c0.2-0.2,0.5-0.4,0.9-0.4S9.1,12.1,9.4,12.3z' fill='rgba(255, 255, 255, 0.25)' /%3E%3C/svg%3E"); }
+    #prox select option {
+      color: rgba(255, 255, 255, 0.75);
+      background-color: #6694ff; }
+  #prox input[type="checkbox"] + label,
+  #prox input[type="radio"] + label {
+    color: rgba(255, 255, 255, 0.75); }
+    #prox input[type="checkbox"] + label:before,
+    #prox input[type="radio"] + label:before {
+      background: rgba(255, 255, 255, 0.075);
+      border-color: rgba(255, 255, 255, 0.25); }
+  #prox input[type="checkbox"]:checked + label:before,
+  #prox input[type="radio"]:checked + label:before {
+    background-color: #ffffff;
+    border-color: #ffffff;
+    color: #6694ff; }
+  #prox input[type="checkbox"]:focus + label:before,
+  #prox input[type="radio"]:focus + label:before {
+    border-color: #ffffff;
+    box-shadow: 0 0 0 1px #ffffff; }
+  #prox ::-webkit-input-placeholder {
+    color: rgba(255, 255, 255, 0.4) !important; }
+  #prox :-moz-placeholder {
+    color: rgba(255, 255, 255, 0.4) !important; }
+  #prox ::-moz-placeholder {
+    color: rgba(255, 255, 255, 0.4) !important; }
+  #prox :-ms-input-placeholder {
+    color: rgba(255, 255, 255, 0.4) !important; }
+  #prox ul.alt li {
+    border-top-color: rgba(255, 255, 255, 0.25); }
+  #prox table tbody tr {
+    border-color: rgba(255, 255, 255, 0.25); }
+    #prox table tbody tr:nth-child(2n + 1) {
+      background-color: rgba(255, 255, 255, 0.075); }
+  #prox table th {
+    color: #ffffff; }
+  #prox table thead {
+    border-bottom-color: rgba(255, 255, 255, 0.25); }
+  #prox table tfoot {
+    border-top-color: rgba(255, 255, 255, 0.25); }
+  #prox table.alt tbody tr td {
+    border-color: rgba(255, 255, 255, 0.25); }
+  #prox .highlights .content {
+    background: #6694ff;
+    box-shadow: 0px 0px 4px 1px rgba(255, 255, 255, 0.025); }
+  #prox .testimonials .content {
+    background: #6694ff;
+    box-shadow: 0px 0px 4px 1px rgba(255, 255, 255, 0.025); }
+    #prox .testimonials .content .credit strong {
+      color: #6694ff; }
+  #prox .inner {
+    position: relative;
+    z-index: 3; }
+  @media screen and (max-width: 980px) {
+    #prox {
+      background-attachment: scroll; } }
